# tree-sitter-jh

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
bindings/c/: tree-sitter-javascript.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_javascript/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterJavaScript/: javascript.h
bindings/swift/TreeSitterJavaScriptTests/: TreeSitterJavaScriptTests.swift
examples/: template.jh
queries/: injections.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
